# value-mpt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Old_Code/: Tadawul_stocks_data.csv  classes.py  imports.py  main.py  requirements.txt  run.py  streamlit.py  utils.py
issues/: api.py  fetching_data_module.py  graham_margin_safety.py  imports.py  requirements.txt  saudi_ticker_fetching.py  sentiment_analysis_module.py  supervisor_agent_module.py
notebooks/: MPT-Optimizer.ipynb  data-lab.ipynb  mpt-optimizer-lab.ipynb  risk-lab.ipynb
src/: MPT.py  classes.py  imports.py  main.py  report_generator.py  ticker.py
src/agents/api/: api.py  example.env
src/agents/graham_fundamentals/: graham_margin_safety.py
src/agents/sentiment_analysis/: sentiment_analysis_module.py
src/agents/supervisor_agent/: supervisor_agent_module.py
src/app/: README.md  _app.py  app.py
src/data/data_extraction/: fetching_data_module.py  saudi_ticker_fetching.py
src/project_requirements/: requirements.txt
src/value-mpt-ai/value_mpt/agents/: crew.py  supervisor.py
src/value-mpt-ai/value_mpt/agents/graham/: graham_margin_safety.py
src/value-mpt-ai/value_mpt/agents/sentiment/: perplexity.py
src/value-mpt-ai/value_mpt/data/: __init__.py  saudi_stock_active_tickers.csv
src/value-mpt-ai/value_mpt/data/data_extraction/: fetching_data_module.py  ticker.py
src/value-mpt-ai/value_mpt/optimizer/: mpt.py
src/value_mpt/optimizer/: MPT.py  main.py
src/value_mpt/risk/: main.py  risk_analyzer_class.py
